--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,15 +38,14 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:26.1.0'
     compile 'com.android.support:design:26.1.0'
 
-    // ViewModel and LiveData// Java8 support for Lifecycles
+    //MVVM
     implementation "android.arch.lifecycle:common-java8:1.0.0"
-
-    // Room
     implementation "android.arch.persistence.room:runtime:1.0.0"
     annotationProcessor "android.arch.persistence.room:compiler:1.0.0"
-
-    // Paging
     implementation "android.arch.paging:runtime:1.0.0-alpha4-1"
+
+    //Horizontal Calendar
+    compile 'devs.mulham.horizontalcalendar:horizontalcalendar:1.3.2'
 
     //Dagger 2
     compile 'com.google.dagger:dagger:2.14.1'
@@ -61,6 +60,4 @@ dependencies {
 
     //Timber
     implementation 'com.jakewharton.timber:timber:4.6.0'
-
-
 }
