--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     testImplementation 'junit:junit:4.12'
 
     //Design Library
+    //noinspection GradleCompatible
     implementation 'com.android.support:appcompat-v7:27.0.2'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     implementation 'com.android.support:support-v4:27.0.2'
@@ -37,7 +38,7 @@ dependencies {
     compile 'com.android.support:design:27.0.2'
 
     //MVVM
-    implementation "android.arch.lifecycle:common-java8:1.0.0"
+    implementation "android.arch.lifecycle:common-java8:1.1.0"
     implementation "android.arch.persistence.room:runtime:1.0.0"
     annotationProcessor "android.arch.persistence.room:compiler:1.0.0"
     implementation "android.arch.paging:runtime:1.0.0-alpha4-1"
@@ -47,6 +48,10 @@ dependencies {
 
     //Animations
     compile 'com.daimajia.easing:library:2.1@aar'
+
+    //Material-Dialogs
+    implementation 'com.afollestad.material-dialogs:core:0.9.6.0'
+    implementation 'com.afollestad.material-dialogs:commons:0.9.6.0'
 
     //Dagger 2
     compile 'com.google.dagger:dagger:2.14.1'
