--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+        android:theme="@style/AppTheme">
         <activity
             android:name=".view.activity.MainActivity"
             android:configChanges="orientation|screenSize">
@@ -22,14 +22,11 @@
         </activity>
         <activity
             android:name=".view.activity.SettingsActivity"
-            android:label="@string/title_activity_settings"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+            android:label="@string/title_activity_settings">
         </activity>
         <activity
             android:name=".view.activity.AboutActivity"
-            android:label="@string/title_activity_about"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+            android:label="@string/title_activity_about">
         </activity>
     </application>
-
 </manifest>
