--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,9 @@ dependencies {
     implementation 'com.afollestad.material-dialogs:core:0.9.6.0'
     implementation 'com.afollestad.material-dialogs:commons:0.9.6.0'
 
+    //Material-Colors
+    compile 'com.github.mcginty:material-colors:1.1.0'
+
     //Dagger 2
     compile 'com.google.dagger:dagger:2.14.1'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.14.1'
